tests/fixtures/invalid/ascii_3_args.py
# ascii() takes at most 1 argument, got 3
x = ascii(1, 1, 1)
